--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,12 +1,20 @@
-<h1><%= @cocktail.name %></h1>
+<div class="banner d-flex justify-content-center align-items-center" style="background-image: url(<%= @cocktail.image %>);">
+  <div>
+    <h1><%= @cocktail.name %></h1>
+  </div>
+</div>
 
-<h2>Ingredients</h2>
-<ul><% @cocktail.doses.each do |dose| %>
-  <li><%= dose.description %> = <%= dose.ingredient.name %>
-  <%= link_to "Delete", dose_path(dose), method: :delete, data: { confirm: 'are you sure?' } %></li>
-  <% end %>
-</ul>
-
-<h1>Add Doses</h1>
-
-<%= render 'doses/new' %>
+<div class="d-flex justify-content-around m-3">
+  <div class="ml-3">
+    <h2>Ingredients</h2>
+    <ul><% @cocktail.doses.each do |dose| %>
+      <li><%= dose.description %> = <%= dose.ingredient.name %>
+      <%= link_to "Delete", dose_path(dose), method: :delete, data: { confirm: 'are you sure?' } %></li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="container">
+    <h1>Add Doses</h1>
+    <%= render 'doses/new' %>
+  </div>
+</div>
