--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,10 @@
-<%= simple_form_for [ @cocktail] do |f| %>
+<div class="container background">
+<h1 class="title mt-3">Add a New Cocktail!</h1>
+<div class="mt-5">
+<%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
+  <%= f.input :image %>
   <%= f.submit "Create Cocktail", class: "btn btn-primary" %>
 <% end %>
+</div>
+</div>
