--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,19 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 
   <body>
+     <nav class="navbar navbar-dark bg-dark">
+      <%= link_to "Mister Cocktail", cocktails_path, class: "navbar-brand" %>
+      <form class="d-flex align-items-center">
+      <%= link_to "Add Cocktail", new_cocktail_path, class: "ml-2 navbar-brand btn btn-outline-primary" %>
+    </form>
+    </nav>
     <%= yield %>
   </body>
 </html>
