--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,7 +3,7 @@
 <div class="mt-5">
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
-  <%= f.input :image %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "Create Cocktail", class: "btn btn-primary" %>
 <% end %>
 </div>
