--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,3 +11,11 @@
   font-size: 70px;
   font-weight: bold;
 }
+
+.image-header {
+  height: 350px;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  position: relative;
+}
