--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,5 +1,56 @@
+.cards-wrapper {
+  padding: 20px 0;
+}
 .card {
-  img {
-    height: 300px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  height: 200px;
+  margin-bottom: 20px;
+  color: white;
+  box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+}
+
+.card-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+.card-delete a {
+  z-index:3;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: white;
+  transition: .3s;
+  &:hover {
+    color: red;
   }
+}
+
+.card-description {
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  bottom: 20px;
+}
+
+.card-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  z-index:2;
+  background: white;
+  opacity: 0;
+  transition: .3s;
+}
+.card-link:hover{
+  opacity: 0.1;
 }
