--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,18 +1,18 @@
-<div class="container">
-<h1 class="title">Mistercocktail</h1>
+<div class="banner d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1569924995007-e591d333f882?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80');">
+  <h1 class="title">Mister Cocktail</h1>
 </div>
 
-<div class="container mt-3">
-  <div class="row">
-  <% @cocktails.each do |cocktail| %>
-  <div class="col-6 col-md-4 col-lg-3 mt-3">
-    <div class="card">
-      <img class="card-img-top" src=<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %> alt="Cocktail image">
-      <div class="card-body bg-light">
-        <h5 class="card-title"> <strong><%= link_to cocktail.name, cocktail_path(cocktail) %></h5></strong>
-      </div>
+<div class="cards-wrapper">
+  <div class="container">
+    <div class="row">
+      <% @cocktails.each do |cocktail| %>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.5)), url('<%= cl_image_path cocktail.photo.key %>');">
+            <div class="card-title text-center"><%= cocktail.name.upcase %></div>
+            <%= link_to "Show", cocktail_path(cocktail), class: "card-link"  %>
+          </div>
+        </div>
+      <% end %>
     </div>
-  </div>
-  <% end %>
   </div>
 </div>
