--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,7 +1,5 @@
-<div class="banner d-flex justify-content-center align-items-center" style="background-image: url(<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>);">
-  <div>
-    <h1><%= @cocktail.name %></h1>
-  </div>
+<div class="image-header text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path  @cocktail.photo.key %>)">
+  <h1><%= @cocktail.name.upcase %></h1>
 </div>
 
 <div class="d-flex justify-content-around m-3">
@@ -14,7 +12,23 @@
     </ul>
   </div>
   <div class="container">
-    <h1>Add Doses</h1>
+    <h2>Add Doses</h1>
     <%= render 'doses/new' %>
+  </div>
+</div>
+
+<div class="d-flex justify-content-around m-3">
+  <div class="ml-3">
+    <h2>Reviews</h2>
+    <% @cocktail.reviews.each do |review|  %>
+    <hr>
+    <p><%= review.content %></p>
+    <p><strong>Rating:</strong> <% review.rating.times do  %> <i class="fas fa-star" style="color: #B0B510"></i>
+    <% end %></p>
+    <% end %>
+  </div>
+  <div class="container">
+    <h2>Add Reviews</h1>
+    <%= render 'reviews/new' %>
   </div>
 </div>
