--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -19,3 +19,14 @@
   color: white;
   position: relative;
 }
+
+.image-header h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-shadow: 0px 1px 2px rgb(0, 0, 0 / 20%);
+  font-weight: 400;
+  letter-spacing: 5px;
+}
